# ananselib

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: fastsearch.rs  read_zip.rs  zip_extract.rs
search/: Cargo.toml
search/src/: lib.rs
src/: lib.rs
zip/: Cargo.toml
zip/src/: datetime.rs  error.rs  lib.rs  path.rs  read.rs  specs.rs
zip/src/read/: poll.rs
zip/src/specs/: attribute.rs  compression.rs  extra_field.rs
